# eagv2-session3

./: README.md  example2.py  excalidraw  pyproject.toml  talk2mcp2.py
